<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="com.example.shuaiz.androido.NotificationActivity">

    <EditText
        android:id="@+id/notification_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:labelFor="@id/notification_content"
        android:text="@string/app_name" />

    <RadioGroup
        android:id="@+id/radio_important"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_urgent"
        app:layout_constraintTop_toBottomOf="@id/notification_content">

        <RadioButton
            android:id="@+id/radio_urgent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_urgent" />

        <RadioButton
            android:id="@+id/radio_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_high" />

        <RadioButton
            android:id="@+id/radio_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_medium" />

        <RadioButton
            android:id="@+id/radio_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_low" />
    </RadioGroup>

    <RelativeLayout
        android:id="@+id/lockscreen_toggle_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/radio_important">

        <TextView
            android:id="@+id/lockscreen_toggle_text"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/lockscreen_toggle"
            android:text="@string/toggle_lockscreen_visibility" />

        <ToggleButton
            android:id="@+id/lockscreen_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="true"
            android:textOff="@string/toggle_private"
            android:textOn="@string/toggle_public" />

    </RelativeLayout>

    <GridLayout
        android:id="@+id/send_btn_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:columnCount="2"
        android:rowCount="1"
        app:layout_constraintTop_toBottomOf="@id/lockscreen_toggle_layout">

        <Button
            android:id="@+id/btn_send1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_send1" />

        <Button
            android:id="@+id/btn_send2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/btn_send2" />
    </GridLayout>

</android.support.constraint.ConstraintLayout>
