<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shuaiz.androido.MetaDataTestActivity">

    <Button
        android:id="@+id/btn_meta_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_meta_string" />

    <Button
        android:id="@+id/btn_meta_string_array"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_meta_string_array"
        app:layout_constraintTop_toBottomOf="@id/btn_meta_string" />

    <Button
        android:id="@+id/btn_meta_string_json"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_meta_string_json"
        app:layout_constraintTop_toBottomOf="@id/btn_meta_string_array" />

    <Button
        android:id="@+id/btn_meta_string_xml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_meta_string_xml"
        app:layout_constraintTop_toBottomOf="@id/btn_meta_string_json" />

    <TextView
        android:id="@+id/meta_data_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_meta_string_xml" />

</android.support.constraint.ConstraintLayout>
